add new fix create pin , reset password otp

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_DATABASE = (Name Database)
 EXPIRE = (Time expired token)
 ISSUER = ("ISSUER")
 SECRET_KEY = (Your Key)
+
+ADMIN_USER= (your email)
+ADMIN_PASSWORD= (your Password email)
