--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wallet Backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index",
     "server": "nodemon"
   },
   "author": "",
@@ -14,13 +14,15 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
